--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <img id ="medium-image" src="" alt="">
       <img id ="right-image" src="" alt="">
   </div>
+
+  <ul id="click-list"></ul>
     </main>
 
     <footer>
