--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-
+        <p class="p1">B</p>
+<p class="p2">Bus mall</p>
+<p class="p3">welcom to our page please choose best products</p>
     </header>
 
     <main>
-  <div>
+  <div class="div1">
       <img id ="left-image" src="" alt="">
       <img id ="medium-image" src="" alt="">
       <img id ="right-image" src="" alt="">
