--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <img id ="right-image" src="" alt="">
   </div>
 
-  <ul id="click-list"></ul>
+  <ol id="click-list"></ol>
     </main>
 
     <footer>
