--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 <p class="p3">welcom to our page please choose best products</p>
     </header>
 
+<form action ="" id = "formround">
+<label for = "rounduser">But a number please</label>
+<input type = "number" name= "rounduser" id="rounduser">
+<input type = "submit" value="rounds">
+</form>
     <main>
   <div class="div1">
       <img id ="left-image" src="" alt="">
@@ -25,6 +30,8 @@
   </div>
 
   <ol id="click-list"></ol>
+  <input type="submit" id="showres" name="res" disabled
+  value="showresults">
     </main>
 
     <footer>
