--- a/index.html
+++ b/index.html
@@ -32,12 +32,23 @@
   <ol id="click-list"></ol>
   <input type="submit" id="showres" name="res" disabled
   value="showresults">
+
+<!-- /////////////////////// -->
+
+<canvas id="myChart"></canvas>
+
+<!-- /////////////////////// -->
+
+
     </main>
 
     <footer>
 
     </footer>
+    <!-- /////////////////////// -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="app.js"></script>
+    <!-- /////////////////////// -->
 </body>
 
 
