--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   value="showresults">
 
 <!-- /////////////////////// -->
-
+<div>
 <canvas id="myChart"></canvas>
-
+</div>
 <!-- /////////////////////// -->
 
 
